--- a/public/css/style.css
+++ b/public/css/style.css
@@ -25,3 +25,19 @@ html, body{
     margin-top: 0;
     padding: 0;
 }
+
+#page-1 .sub-title{
+    font-size: 1.5rem;
+    text-align: center;
+    color: black;
+    margin-bottom: 0;
+}
+
+#page-1 .title{
+    font-size: 4.5rem;
+    text-align: center;
+    font-weight: bold;
+    color: black;
+    margin-top: 0;
+    padding: 0;
+}
