--- a/public/css/style.css
+++ b/public/css/style.css
@@ -22,7 +22,7 @@ html, body{
     text-align: center;
     font-weight: bold;
     color: white;
-    margin-top: 0;
+    margin: 0;
     padding: 0;
 }
 
@@ -38,6 +38,6 @@ html, body{
     text-align: center;
     font-weight: bold;
     color: black;
-    margin-top: 0;
+    margin: 0;
     padding: 0;
 }
