--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,5 @@
 html, body{ 
-    font-family: 'Pretendard', sans-serif;
+    font-family: "Pretendard", sans-serif;
     margin: 0;
     width: 100vw;
     height: 100vh;
