--- a/public/css/style.css
+++ b/public/css/style.css
@@ -46,11 +46,10 @@ html, body{
     --offset-value: 30;
     --btn-size: 60;
     
-    --green: #12c2e9;
+    --blue: #12c2e9;
 }
 
 .wrapper {
-    font-family: 'Encode Sans Condensed', sans-serif;
     font-weight: 600;
     height: 100vh;
     width: 100%;
@@ -73,7 +72,7 @@ html, body{
     bottom: calc((var(--offset-value))*1px);
     left: calc(var(--offset-value)*1px);
     border-radius: 50%;
-    background: #fafafa;
+    background: #FAFAFA;
     cursor: pointer;
     margin: 0;
     padding: 0 15px;
@@ -88,7 +87,7 @@ html, body{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    color: var(--green);
+    color: var(--blue);
     box-shadow: 0 6px 12px rgba(0,0,0,.1);
     transition: transform .3s;
   }
@@ -165,14 +164,14 @@ html, body{
 }
   
 #toggle-btn:before {
-    content: '';
+    content: "";
     transition: .2s .2s;
     position: absolute;
     top: 3px;
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0,0,0,.1);
+    background: rgba(0, 0, 0, .1);
     border-radius: inherit;
     filter: blur(5px);
     z-index: -2;
@@ -186,7 +185,7 @@ html, body{
     width: 100%;
     height: 100%;
     border-radius: inherit;
-    background: #fafafa;
+    background: #FAFAFA;
     z-index: -1;
 }
 
@@ -290,8 +289,8 @@ nav li + li {
     font-size: calc(4vmin + 1em);
     text-align: center;
     margin: auto;
-    color: #fff;
-    text-shadow: 0 6px 18px rgba(0,0,0,.1);
+    color: white;
+    text-shadow: 0 6px 18px rgba(0, 0, 0, .1);
 }
   
 * {
