--- a/public/css/style.css
+++ b/public/css/style.css
@@ -45,7 +45,6 @@ html, body{
 :root {
     --offset-value: 30;
     --btn-size: 60;
-    
     --blue: #12c2e9;
 }
 
@@ -54,7 +53,6 @@ html, body{
     height: 100vh;
     width: 100%;
     position: relative;
-    background: linear-gradient(to top right, #12c2e9, #D0DB68);
 }
 
 #nav-bg {
@@ -212,14 +210,14 @@ nav li {
     font-size: 30px;
     color: #212121;
     user-select: none;
-    transform: translate(-20px,20px) scale(.9);
+    transform: translate(-20px, 20px) scale(.9);
     transition: 0s;
     opacity: 0.0001;
     visibility: hidden;
     will-change: transform;
 }
   
-nav li + li {
+nav li+li {
     margin-top: 30px;
 }
   
@@ -227,7 +225,7 @@ nav li + li {
     transform: none;
     opacity: 1;
     visibility: visible;
-    transition: .35s cubic-bezier(.4,2.08,.55,1);
+    transition: .35s cubic-bezier(.4, 2.08, .55, 1);
 }
   
 #toggle-btn.shown ~ .wrapper nav li:nth-child(1) {
@@ -245,7 +243,7 @@ nav li + li {
 .link {
     position: relative;
     touch-action: manipulation;
-    -webkit-tap-highlight-color: rgba(0,0,0,0);
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
   
 .link:before, .link:after {
