--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,7 +5,7 @@ html, body{
     height: 100vh;
 }
   
-* {
+*{
     box-sizing: border-box;
     margin: 0;
     padding: 0;
@@ -64,20 +64,20 @@ html, body{
     padding: 0;
 }
 
-:root {
+:root{
     --offset-value: 30;
     --btn-size: 60;
     --blue: #12c2e9;
 }
 
-.wrapper {
+.wrapper{
     font-weight: 600;
     height: 100vh;
     width: 100%;
     position: relative;
 }
 
-#nav-bg {
+#nav-bg{
     transform-origin: center center;
     transition: transform .3s;
     transform: translate(var(--translate-x), var(--translate-y)) scale(var(--scale));
@@ -85,7 +85,7 @@ html, body{
     pointer-events: none;
 }
 
-.btn {
+.btn{
     position: fixed;
     height: calc(var(--btn-size)*1px);
     width: calc(var(--btn-size)*1px);
@@ -102,7 +102,7 @@ html, body{
     -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
   
-#toggle-btn {
+#toggle-btn{
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -112,20 +112,20 @@ html, body{
     transition: transform .3s;
   }
   
-#toggle-btn span {
+#toggle-btn span{
     position: relative;
     width: 100%;
 }
   
-#toggle-btn span {
+#toggle-btn span{
     margin-top: -4px;
 }
 
-#toggle-btn span + span {
+#toggle-btn span + span{
     margin-top: 8px;
 }
   
-#toggle-btn span:before, #toggle-btn span:after {
+#toggle-btn span:before, #toggle-btn span:after{
     content: "";
     position: absolute;
     top: 0;
@@ -138,51 +138,51 @@ html, body{
     transform-origin: center center;
 }
   
-#toggle-btn span:before {
+#toggle-btn span:before{
     left: 0;
     border-radius: 3px 0 0 3px;
 }
   
-#toggle-btn span:after {
+#toggle-btn span:after{
     right: 0;
     border-radius: 0 3px 3px 0;
 }
   
-#toggle-btn.shown span:nth-of-type(1):before {
+#toggle-btn.shown span:nth-of-type(1):before{
     transform: translate3d(3px, 3.5px, 0) rotate(45deg);
 }
   
-#toggle-btn.shown span:nth-of-type(1):after {
+#toggle-btn.shown span:nth-of-type(1):after{
     transform: translate3d(-3px, 3.5px, 0) rotate(-45deg);
 }
   
-#toggle-btn.shown span:nth-of-type(3):before {
+#toggle-btn.shown span:nth-of-type(3):before{
     transform: translate3d(3px, -3.5px, 0) rotate(-45deg);
 }
   
-#toggle-btn.shown span:nth-of-type(3):after {
+#toggle-btn.shown span:nth-of-type(3):after{
     transform: translate3d(-3px, -3.5px, 0) rotate(45deg);
 }
   
 #toggle-btn.shown span:nth-of-type(2):before,
-#toggle-btn.shown span:nth-of-type(2):after {
+#toggle-btn.shown span:nth-of-type(2):after{
     opacity: 0.0001;
 }
   
-#toggle-btn.shown span:nth-of-type(2):before {
+#toggle-btn.shown span:nth-of-type(2):before{
     transform: translateX(-200%);
 }
   
-#toggle-btn.shown span:nth-of-type(2):after {
+#toggle-btn.shown span:nth-of-type(2):after{
     transform: translateX(200%);
 }
   
-#toggle-btn.shown:before {
+#toggle-btn.shown:before{
     transform: scale(.6);
     transition: .2s;
 }
   
-#toggle-btn:before {
+#toggle-btn:before{
     content: "";
     transition: .2s .2s;
     position: absolute;
@@ -196,7 +196,7 @@ html, body{
     z-index: -2;
 }
 
-#toggle-btn:after {
+#toggle-btn:after{
     content: "";
     position: absolute;
     top: 0;
@@ -221,13 +221,13 @@ nav{
     pointer-events: none;
 }
   
-nav ul {
+nav ul{
     margin: auto;
     pointer-events: auto;
     text-align: center;
 }
   
-nav li {
+nav li{
     font-size: 30px;
     color: #212121;
     user-select: none;
@@ -238,36 +238,36 @@ nav li {
     will-change: transform;
 }
   
-nav li+li {
+nav li+li{
     margin-top: 30px;
 }
   
-#toggle-btn.shown ~ .wrapper nav li {
+#toggle-btn.shown ~ .wrapper nav li{
     transform: none;
     opacity: 1;
     visibility: visible;
     transition: .35s cubic-bezier(.4, 2.08, .55, 1);
 }
   
-#toggle-btn.shown ~ .wrapper nav li:nth-child(1) {
+#toggle-btn.shown ~ .wrapper nav li:nth-child(1){
     transition-delay: .15s;
 }
 
-#toggle-btn.shown ~ .wrapper nav li:nth-child(2) {
+#toggle-btn.shown ~ .wrapper nav li:nth-child(2){
     transition-delay: .125s;
 }
 
-#toggle-btn.shown ~ .wrapper nav li:nth-child(3) {
+#toggle-btn.shown ~ .wrapper nav li:nth-child(3){
     transition-delay: .1s;
 }
 
-.link {
+.link{
     position: relative;
     touch-action: manipulation;
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
   
-.link:before, .link:after {
+.link:before, .link:after{
     position: absolute;
     content: "";
     height: 3px;
@@ -277,34 +277,34 @@ nav li+li {
     transition: transform .3s cubic-bezier(.5,.5,0,1);
 }
   
-.link:before {
+.link:before{
     left: 0;
     transform: translateX(calc(-100% - 10px)) scaleX(0);
     transform-origin: left;
 }
 
-.link:after {
+.link:after{
     right: 0;
     transform: translateX(calc(100% + 10px)) scaleX(0);
     transform-origin: right;
 }
 
-.link:hover:before {
+.link:hover:before{
     transform: translateX(calc(-100% - 10px)) scaleX(1);
     transform-origin: right;
 }
 
-.link:hover:after {
+.link:hover:after{
     transform: translateX(calc(100% + 10px)) scaleX(1);
     transform-origin: left;
 }
 
-#content {
+#content{
     display: flex;
     height: 100%;
 }
   
-#content h1 {
+#content h1{
     font-size: calc(4vmin + 1em);
     text-align: center;
     margin: auto;
@@ -312,22 +312,22 @@ nav li+li {
     text-shadow: 0 6px 18px rgba(0, 0, 0, .1);
 }
 
-a, a:visited, a:focus, a:active, a:link {
+a, a:visited, a:focus, a:active, a:link{
     text-decoration: none;
     outline: 0;
 }
 
-a {
+a{
 color: currentColor;
 transition: .2s ease-in-out;
 }
 
-ul {
+ul{
 padding: 0;
 list-style: none;
 }
   
-img {
+img{
     vertical-align: middle;
     height: auto;
     width: 100%;
@@ -349,4 +349,15 @@ select, #searchPriceButton{
 
 #select_parts, #searchPriceButton{
     margin-top: 0.5rem;
+}
+
+#result{
+    background-color: #CEF4FF;
+    display: block;
+    margin: auto;
+    margin-top: 3.5rem;
+    margin-bottom: 7rem;
+    width: 75%;
+    height: 10rem;
+    border-radius: 1rem;
 }
